# trial-c

./: readme.md
cc3th/: readme.md  vcb_freetype2.md  vcb_libxlsxwriter.bat  vcb_zlib.bat
cmdemo/: CMakeLists.txt
cmdemo/msgpackdemo/: CMakeLists.txt  main.c
demo/: .gitignore
demo/vcprj/: vcprj.sln
demo/vcprj/vcprj/: vcprj.vcxproj  vcprj.vcxproj.filters
libzmqdemo/: CMakeLists.txt  CMakeSettings.json
libzmqdemo/clidemo/: CMakeLists.txt  main.c
libzmqdemo/cmake/: Libzmq.cmake
libzmqdemo/srvdemo/: CMakeLists.txt  main.c
somedemo/: .gitignore  readme.md
somedemo/aliyunoss/: CMakeLists.txt
somedemo/aliyunoss/demo1/: CMakeLists.txt
wasmd/: .gitignore  main.c  readme.md  side.c
